--- a/ProtoRabbit-MAUI/Resources/Styles/Styles.xaml
+++ b/ProtoRabbit-MAUI/Resources/Styles/Styles.xaml
@@ -402,12 +402,7 @@
         <Setter Property="SelectedTabColor" Value="{AppThemeBinding Light={StaticResource Gray950}, Dark={StaticResource Gray200}}" />
     </Style>
 
-    <!-- Custom Styles -->
-    <Style x:Key="SectionLabelStyle" TargetType="Label">
-        <Setter Property="FontSize" Value="Large" />
-        <Setter Property="TextColor" Value="LightGrey" />
-    </Style>
-
+    <!-- Custom Resources-->
     <toolkit:InvertedBoolConverter x:Key="InvertedBoolConverter" />
 
 </ResourceDictionary>
