--- a/ProtoRabbit-MAUI/AppShell.xaml
+++ b/ProtoRabbit-MAUI/AppShell.xaml
@@ -5,11 +5,12 @@
     xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
     xmlns:views="clr-namespace:ProtoRabbit.Views"
+    xmlns:pages="clr-namespace:ProtoRabbit.Views.Pages"
     Shell.FlyoutBehavior="Disabled">
 
     <ShellContent
         Title="Home"
-        ContentTemplate="{DataTemplate views:MainPage}"
+        ContentTemplate="{DataTemplate pages:MainPage}"
         Route="MainPage" />
 
 </Shell>
