--- a/ProtoRabbit-MAUI/Views/Pages/NewSubscriptionPage.xaml
+++ b/ProtoRabbit-MAUI/Views/Pages/NewSubscriptionPage.xaml
@@ -5,7 +5,7 @@
              xmlns:toolkit="http://schemas.microsoft.com/dotnet/2022/maui/toolkit"
              xmlns:viewmodel="clr-namespace:ProtoRabbit.ViewModels"
              x:DataType="viewmodel:NewSubscriptionViewModel"
-             x:Class="ProtoRabbit.Views.NewSubscriptionPage"
+             x:Class="ProtoRabbit.Views.Pages.NewSubscriptionPage"
              Shell.PresentationMode="Animated"
              Title="New Subscription">
     
